[package]
name = "r4at"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[lib]
name = "protocol"
path = "src/protocol.rs"

[dependencies]
crossterm = "0.29.0"
getrandom = "0.4.2"
ratatui = "0.30.2"
thiserror = "2.0.18"
